# ROS2-Track-Pedestrian-Control

./: README.md
control_barrel_world/: CMakeLists.txt  package.xml
control_barrel_world/include/control_barrel_world/: control_barrel_world_node.hpp
control_barrel_world/launch/: solution.launch.xml
control_barrel_world/src/: control_barrel_world_main.cpp  control_barrel_world_node.cpp
opencv_person_detector/: CMakeLists.txt  package.xml
opencv_person_detector/include/opencv_person_detector/: opencv_person_detector_node.hpp
opencv_person_detector/launch/: opencv_person_detector_launch.xml
opencv_person_detector/src/: opencv_person_detector_main.cpp  opencv_person_detector_node.cpp
